--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -19,7 +19,7 @@ jobs:
     - name: convert ipynb to publishable html for active-visualization
       run: |
         python convert.py
-    - uses: mikeal/publish-to-github-action@main
+    - uses: mikeal/publish-to-github-action@master
       env:
         GITHUB_TOKEN: ${{secrets.GITHUB_TOKEN}}
         BRANCH_NAME: '' #optional defaults to master
